// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deve renderizar corretamente 1`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-1 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-2:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::placeholder {
  color: #B9B9BD;
}

.emotion-2:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-2:not(:disabled):hover {
  border-color: #818489;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-2:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-4 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-4 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

<div
  class="emotion-5"
>
  <button
    class="emotion-1"
    title="Página anterior"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
          data-name="angle-left"
        />
      </svg>
    </span>
  </button>
  <input
    class="emotion-2"
    type="text"
    value="6"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-4"
    title="Próxima página"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
          data-name="angle-right"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 2`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-2:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::placeholder {
  color: #B9B9BD;
}

.emotion-2:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-2:not(:disabled):hover {
  border-color: #818489;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-2:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-4 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-4 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-1 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

<div
  class="emotion-5"
>
  <button
    class="emotion-1"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
          data-name="angle-left"
        />
      </svg>
    </span>
  </button>
  <input
    class="emotion-2"
    type="text"
    value="1"
  />
  <span>
    de 10
  </span>
  <button
    class="emotion-4"
    title="Próxima página"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
          data-name="angle-right"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`deve renderizar corretamente 3`] = `
.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.emotion-0 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-2 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition: all .2s;
  transition: all .2s;
  width: 47px;
  text-align: center;
  margin: 0 0.5rem 0 0.25rem;
}

.emotion-2::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-2:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-2::placeholder {
  color: #B9B9BD;
}

.emotion-2:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-2:not(:disabled):hover {
  border-color: #818489;
}

.emotion-2:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-2:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  margin-left: 0.25rem;
}

.emotion-4 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-4 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

.emotion-1 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: color .2s;
  transition: color .2s;
}

.emotion-1 > span > :not(:last-child) {
  margin-right: 0.5rem;
}

.emotion-1:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-1:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-1:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

<div
  class="emotion-5"
>
  <button
    class="emotion-1"
    disabled=""
    title="Página anterior"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M14.47 5.64l1.42 1.41L10.94 12l4.95 4.95-1.42 1.41L8.11 12l6.36-6.36z"
          data-name="angle-left"
        />
      </svg>
    </span>
  </button>
  <input
    class="emotion-2"
    type="text"
    value="1"
  />
  <span>
    de 9
  </span>
  <button
    class="emotion-4"
    title="Próxima página"
    type="button"
  >
    <span>
      <svg
        aria-hidden="true"
        class="emotion-0"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M9.53 18.36l-1.42-1.41L13.06 12 8.11 7.05l1.42-1.41L15.89 12l-6.36 6.36z"
          data-name="angle-right"
        />
      </svg>
    </span>
  </button>
</div>
`;
